--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010001.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010001.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010001</h5>
             <p class="card-text">นายกรณ์ดนัย อินทรโอสถ</p>
@@ -106,7 +106,7 @@
         
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010002.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010002.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010002</h5>
             <p class="card-text">นางสาวกัญญาวีร์ ศรีกัลยาณกุล</p>
@@ -117,7 +117,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010003.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010003.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010003</h5>
             <p class="card-text">นายจาตุรนต์ แสงสังข์</p>
@@ -128,7 +128,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010004.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010004.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010004</h5>
             <p class="card-text">นายจิรวัฒน์ บุญแผน</p>
@@ -139,7 +139,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010005.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010005.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010005</h5>
             <p class="card-text">นางสาวชลธิชา หล้าโสม</p>
@@ -150,7 +150,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010006.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010006.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010006</h5>
             <p class="card-text">นายชัยวัฒน์ ปรารมย์</p>
@@ -161,7 +161,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010007.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010007.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010007</h5>
             <p class="card-text">นายชัยวัฒน์ ลบแย้ม</p>
@@ -172,7 +172,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010008.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010008.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010008</h5>
             <p class="card-text">นายณภัทร เสลี</p>
@@ -183,7 +183,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010009.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010009.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010009</h5>
             <p class="card-text">นาณัฐพล พันธุ</p>
@@ -194,7 +194,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010010.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010010.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010010</h5>
             <p class="card-text">นายทัพพ์จิรัฐ กาญจนเกตุ</p>
@@ -205,7 +205,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010011.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010011.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010011</h5>
             <p class="card-text">นายธนวัฒน์ ทองดีนอก</p>
@@ -216,7 +216,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010012.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010012.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010012</h5>
             <p class="card-text">นายธนสร ใสยิ่ง</p>
@@ -227,7 +227,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010013.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010013.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010013</h5>
             <p class="card-text">นางสาวธวัลรัตน์ เกตุมงคลวิวัฒน์</p>
@@ -238,7 +238,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010014.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010014.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010014</h5>
             <p class="card-text">นายธันวา เกตุสุวรรณ</p>
@@ -249,7 +249,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010015.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010015.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010015</h5>
             <p class="card-text">นายธีรวัฒน์ พรมสิงห์</p>
@@ -260,7 +260,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010016.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010016.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010016</h5>
             <p class="card-text">นางสาวนภัส เพชรฤทธิ์</p>
@@ -271,7 +271,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010017.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010017.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010017</h5>
             <p class="card-text">นายนรวีณ์ ย่วยยินรักษ์</p>
@@ -282,7 +282,7 @@
 
         <div class="col">
         <div class="card">
-          <img src="/4-1/68319010018.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010018.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010018</h5>
             <p class="card-text">นายนฤเบศ แพทย์ประสิทธิ์</p>
@@ -293,7 +293,7 @@
 
                 <div class="col">
         <div class="card">
-          <img src="/4-1/68319010019.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010019.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010019</h5>
             <p class="card-text">นายนาวิน ศิริชันแสง</p>
@@ -304,7 +304,7 @@
 
                 <div class="col">
         <div class="card">
-          <img src="/4-1/68319010020.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010020.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010020</h5>
             <p class="card-text">นางสาวนิลนภา หินโม</p>
@@ -315,7 +315,7 @@
 
                 <div class="col">
         <div class="card">
-          <img src="/4-1/68319010021.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010021.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010021</h5>
             <p class="card-text">นายแผ่นฟ้า เทศวิศาล</p>
@@ -326,7 +326,7 @@
 
                 <div class="col">
         <div class="card">
-          <img src="/4-1/68319010022.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010022.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010022</h5>
             <p class="card-text">นายพัณณ์กฤต สินธุรักษ์</p>
@@ -337,7 +337,7 @@
 
                 <div class="col">
         <div class="card">
-          <img src="/4-1/68319010023.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
+          <img src="4-1/68319010023.jpg" class="card-img-top rounded-cicle" style="width: 250px;">
           <div class="card-body">
             <h5 class="card-title">68319010023</h5>
             <p class="card-text">นายภัทรพล พลเขต</p>
